--- a/kakao/css/common.css
+++ b/kakao/css/common.css
@@ -20,7 +20,7 @@ time, mark, audio, video {
   text-decoration: none;
 	vertical-align: baseline;
   color:#373737;
-	font-family: '돋움',dotum,sans-serif;
+	font-family: font-family:'Kakao Regular','맑은 고딕','Malgun Gothic',Apple SD Gothic Neo,'돋움',dotum,sans-serif;
 }
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
