--- a/kakao/css/import.css
+++ b/kakao/css/import.css
@@ -649,3 +649,68 @@ section .right .notice ul li a {
 section .right .notice ul li a::before {
   content: "³ ";
 }
+#careers nav {
+  height: 59px;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0);
+}
+#careers nav header {
+  float: left;
+  line-height: 59px;
+}
+#careers nav header a {
+  color: #fff;
+}
+#careers nav ul {
+  background-color: none;
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+}
+#careers nav ul li {
+  margin-left: 41px;
+  display: inline-block;
+}
+#careers nav ul li a {
+  display: block;
+  height: 59px;
+  padding: 0 2px;
+  line-height: 59px;
+  font-weight: bold;
+  color: #fff;
+}
+#careers nav > a {
+  float: right;
+  line-height: 59px;
+  color: #fff;
+}
+#careers section {
+  width: 100%;
+  margin: 0;
+}
+#careers section .main-slide {
+  background-color: powderblue;
+  width: 100%;
+  height: 600px;
+}
+#careers section .main-slide .slide-btn {
+  position: absolute;
+}
+#careers section .main-slide .slide-view ul li {
+  display: inline-block;
+}
+#careers section .main-slide .slide-view ul li > div {
+  display: none;
+}
+#careers section .main-slide .slide-view ul li > div span {
+  position: absolute;
+}
+#careers section .main-slide .slide-view ul li > div img {
+  width: 100%;
+  height: 720px;
+}
+#careers section .main-slide .slide-view ul li:first-child > div {
+  display: block;
+}
