--- a/espoir/css/import.css
+++ b/espoir/css/import.css
@@ -244,7 +244,7 @@ header .bg-grid .col {
 #main .algrid .algrid-right .algrid-right-s {
   margin-top: 40px;
   width: 100%;
-  height: 345px;
+  height: 330px;
 }
 #main .algrid .algrid-right .algrid-right-m div {
   vertical-align: top;
@@ -272,22 +272,229 @@ header .bg-grid .col {
   width: 100%;
   padding-top: 80px;
   margin-left: -5px;
-  background-color: powderblue;
+}
+#main .social-review > div {
+  width: 100%;
+}
+#main .social-review > div a {
+  display: block;
+  width: 100%;
+  text-align: center;
+}
+#main .social-review > div a span {
+  margin-top: 10px;
+  display: block;
+  color: #aaa;
+}
+#main .social-review > div:first-child {
+  height: 20px;
+  margin-bottom: 80px;
+  background-image: url('../image/pattern.gif');
+}
+#main .social-review h2 {
+  display: block;
+  width: 100%;
+  text-align: center;
+}
+#main .social-review h2 img {
+  display: inline-block;
+}
+#main .social-review h2 span {
+  font-size: 0;
+  text-indent: -999px;
+}
+#main .social-review ul {
+  width: 100%;
+  height: 762px;
+  margin-top: 75px;
+  overflow: hidden;
+}
+#main .social-review ul li {
+  display: inline-block;
+  width: 24.5%;
+}
+#main .social-review ul li > img {
+  width: 340px;
+  height: 328px;
+}
+#main .social-review ul li div {
+  padding: 30px 20px 10px;
+}
+#main .social-review ul li div p {
+  display: block;
+  width: 205px;
+  font-size: 14px;
+  line-height: 22.4px;
+  margin-bottom: 20px;
+}
+#main .social-review ul li div p span {
+  display: block;
+  color: #e55a28;
+  font-size: 14px;
+}
+#main .social-review ul li div img {
+  float: right;
+  position: relative;
+  top: -100px;
+}
+#main .social-review ul li div:last-child {
+  width: 300px;
+  height: 157px;
+  border-top: 1px solid #000;
+}
+#main .social-review ul li div:last-child img {
+  top: 0;
+  float: left;
+  display: inline-block;
+  width: 157px;
+  height: 157px;
+}
+#main .social-review ul li div:last-child p {
+  width: 140px;
+  float: right;
+  display: inline-block;
+}
+#main .social-review ul li div:last-child p span {
+  color: #000;
+  font-size: 14px;
+  line-height: 22.4px;
+}
+#main .social-review ul li div:last-child p a {
+  margin-top: 10px;
+  color: #e55a28;
+  font-size: 14px;
+  line-height: 29px;
+  height: 29px;
+  display: inline-block;
+  border-bottom: 2px solid #f36;
 }
 #main .ending {
   height: 147px;
   margin: 97px 2px 97px -6px;
+  background-color: #eee;
   padding: 40px;
-  background-color: #ddd;
+}
+#main .ending > div {
+  vertical-align: top;
+  display: inline-block;
+  height: 145px;
+  width: 310px;
+  border-left: 1px solid #ccc;
+}
+#main .ending > div cite {
+  font-size: 21px;
+  font-weight: bold;
+  color: #000;
+  letter-spacing: -2px;
+  line-height: 35px;
+}
+#main .ending > div ul li {
+  margin-top: 14px;
+}
+#main .ending > div ul li a {
+  font-size: 12px;
+  color: #999;
+}
+#main .ending > div ul li span {
+  font-size: 12px;
+  color: #999;
+  float: right;
+}
+#main .ending > div:first-child {
+  border-left: 0;
+}
+#main .ending .end-sns {
+  padding-left: 40px;
+}
+#main .ending .end-sns ul {
+  padding: 30px 0 ;
+}
+#main .ending .end-sns ul li {
+  display: inline-block;
+  width: 33px;
+  height: 30px;
+  background-color: #fff;
+  margin-left: 11px;
+}
+#main .ending .end-sns span {
+  font-size: 14px;
+  color: #666;
+}
+#main .ending .end-cs {
+  width: 617px;
+  padding-left: 40px;
+}
+#main .ending .end-cs cite {
+  display: block;
+}
+#main .ending .end-cs p {
+  vertical-align: middle;
+  display: inline-block;
+}
+#main .ending .end-cs p strong {
+  padding: 10px 0 30px 0 ;
+  display: block;
+  font-size: 28px;
+  font-weight: bold;
+}
+#main .ending .end-cs p span {
+  color: #666;
+  font-size: 14px;
+}
+#main .ending .end-cs ul {
+  margin-left: 35px;
+  display: inline-block;
+}
+#main .ending .end-cs ul li {
+  margin-left: 10px;
+  display: inline-block;
+  width: 73px;
+  height: 98px;
+  background-color: #ccc;
+}
+#main .ending .end-cs ul li a {
+  display: block;
+  text-align: center;
+}
+#main .ending .end-cs ul li a img {
+  width: 73px;
+  height: 73px;
 }
 #shop {
   display: none;
 }
 footer {
+  position: relative;
   width: 100%;
   height: 267px;
   position: absolute;
   top: 4833px;
   margin: 0 auto;
   background-color: #282829;
+}
+footer div {
+  margin: 0 auto;
+  display: block;
+  width: 1424px;
+}
+footer div:first-child {
+  position: relative;
+  width: 100%;
+  border-bottom: 1px solid #999;
+}
+footer div ul {
+  margin: 0 auto;
+  display: block;
+  width: 1424px;
+  height: 51px;
+}
+footer div ul li {
+  line-height: 51px;
+  color: #999;
+  font-size: 12px;
+  display: inline-block;
+}
+footer div ul li span {
+  padding: 0 10px;
+  color: #999;
 }
