--- a/kakao/less/careers.less
+++ b/kakao/less/careers.less
@@ -5,7 +5,26 @@
     position: fixed;
     top:0;
     background-color:rgba(0, 0, 0, 0);
+    &:hover{
+      background-color:#fff;
+      header{
+        a{
+        color: #000;
+        }
+      }
+      a{
+        color: #000;
+      }
+      ul{
+        li{
+          a{
+            color: #000;
+          }
+        }
+      }
+    }
     header{
+      padding:0 10px;
       float: left;
       line-height:59px;
       a{
@@ -27,10 +46,14 @@
           line-height:59px;
           font-weight: bold;
           color: #fff;
+          &:hover{
+            text-decoration:underline;
+          }
         }
       }
     }
     >a{
+      padding:0 10px;
       float: right;
       line-height:59px;
       color: #fff;
@@ -38,15 +61,28 @@
   }
   section{
     width: 100%;
+    height: auto;
     margin: 0;
-    div{
-    }
     .main-slide{
       background-color: powderblue;
       width: 100%;
-      height: 600px;
+      height: 720px;
       .slide-btn{
-        position: absolute;
+        a{
+          position: absolute;
+          z-index:2;
+          top:300px;
+          left:1800px;
+          display:inline-block;
+          width: 43px;
+          height: 43px;
+          font-size: 0;
+          text-indent:-999px;
+          background-image: url('../image/icon.png');
+          &:first-child{
+            left: 50px;
+          }
+        }
       }
       .slide-view{
         ul{
@@ -54,7 +90,34 @@
             display: inline-block;
             >div{
               display: none;
-              span{
+              a{
+                z-index: 2;
+                position:absolute;
+                display: block;
+                top:300px;
+                left:150px;
+                width: 497px;
+                height: 207px;
+                >span{
+                  font-size: 15px;
+                  color:#fff;
+                }
+                strong{
+                  display: block;
+                  color:#fff;
+                  padding:12px 0 35px;
+                  font-size:42px;
+                  letter-spacing:-1px;
+                  line-height: 60px;
+                }
+                i{
+                  color: #ffdc00;
+                  font-size:12px;
+                  line-height: 18px;
+                  font-weight: bold;
+                }
+              }
+              >span{
                 position: absolute;
               }
               img{
@@ -71,6 +134,90 @@
         }
       }
     }
+    .inside{
+      width: 100%;
+      height: 400px;
+      ul{
+        li{
+          width:33.33%;
+          height: 100%;
+          display: inline-block;
+          position: relative;
+          margin-left:-5px;
+          a{
+            width: 100%;
+            background-color:#FFD6B5;
+            display: block;
+            text-align: center;
+            >span{
+              position: absolute;
+              top:20px;
+              left: 20px;
+              font-size:15px;
+              font-weight: bold;
+              z-index: 1;
+            }
+            img{
+              display: inline-block;
+              width: 400px;
+            }
+            >div{
+              position: relative;
+              height:400px;
+              width:100%;
+              background-color:#fff;
+              strong{
+                position: absolute;
+                top:140px;
+                left:280px;
+                font-size:100px;
+              }
+              >span{
+                position: absolute;
+                display: block;
+                top:120px;
+                width:200px;
+                left:240px;
+                height: 100px;
+                text-align: center;
+                padding:0 20px;
+                line-height: 47px;
+                font-size:30px;
+              }
+            }
+          }
+         &:last-child{
+           a{
+             div{
+               background-color: #ddd;
+             }
+           }
+         }
+        }
+      }
+    }
   }
-  footer{}
+  footer{
+    width: 100%;
+    height: 60px;
+    padding: 15px 0;
+    strong{
+      padding-left:20px;
+      color: #1e1e1e;
+      font-size: 11px;
+      line-height: 20px;
+      font-weight: bold;
+    }
+    span{
+      color: #1e1e1e;
+      font-size: 11px;
+      line-height: 20px;
+    }
+    i{
+      padding-left:20px;
+      color:#333;
+      font-size: 11px;
+      line-height: 20px;
+    }
+  }
 }
