--- a/espoir/css/import.css
+++ b/espoir/css/import.css
@@ -14,6 +14,7 @@
 header {
   height: 60px;
   background-color: #000;
+  position: relative;
 }
 header nav {
   width: 1424px;
@@ -27,26 +28,76 @@ header nav div h1 {
   font-size: 14px;
   text-indent: -999px;
 }
-header nav ul {
+header nav .nav ul {
   float: right;
   padding-left: 20px;
 }
-header nav ul li {
+header nav .nav ul li {
   display: inline-block;
   width: 100px;
   text-align: center;
 }
-header nav ul li a {
+header nav .nav ul li a {
   font-size: 18px;
   font-weight: bold;
   line-height: 60px;
   color: #fff;
   letter-spacing: -1.5px;
 }
-header nav ul li div {
+header nav .nav ul li div {
   display: none;
+  position: absolute;
+  top: 60px;
+  left: 0;
+  width: 100%;
+  height: 0;
+  overflow: hidden;
+  z-index: 2;
+  background-color: #fff;
+  text-align: left;
 }
-header nav .nav-icon li a {
+header nav .nav ul li div ul {
+  position: relative;
+  left: -600px;
+  top: 30px;
+  display: inline-block;
+  width: 14%;
+  height: 394px;
+  padding: 49px;
+  margin-left: 30px;
+  border: 1px solid #000;
+}
+header nav .nav ul li div ul li {
+  display: block;
+  padding-bottom: 10px;
+  line-height: 20px;
+  font-size: 16px;
+  text-align: left;
+}
+header nav .nav ul li div ul li:first-child {
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 34px;
+}
+header nav .nav ul li div ul li div {
+  width: 194px;
+  font-size: 14px;
+  color: #bbb;
+  font-weight: lighter;
+  line-height: 20px;
+  height: 66px;
+}
+header nav .nav ul li div figure {
+  position: relative;
+  left: -600px;
+  top: -10px;
+  display: inline-block;
+  width: 14%;
+  height: 394px;
+  padding: 49px;
+  float: right;
+}
+header nav .nav .nav-icon li a {
   font-size: 0;
   text-indent: -999px;
   background-repeat: no-repeat;
@@ -255,10 +306,17 @@ header .bg-grid .col {
   left: 0;
   position: relative;
 }
-#main .algrid .algrid-left ul li.gradation div {
+#main .algrid .algrid-left ul li.gradation {
   width: 337px;
   height: 372px;
+  overflow: hidden;
+  background-color: #ddd;
+}
+#main .algrid .algrid-left ul li.gradation div {
+  width: 3000px;
+  height: 372px;
   position: relative;
+  left: 0;
   background: linear-gradient(270deg, #18f0b8, #e6376f, #e87f19);
 }
 #main .algrid .algrid-right {
@@ -273,16 +331,59 @@ header .bg-grid .col {
   height: 35px;
 }
 #main .algrid .algrid-right .algrid-right-s {
+  position: relative;
   margin-top: 40px;
   width: 100%;
   height: 330px;
+}
+#main .algrid .algrid-right .algrid-right-s .algrid-right-s-btn {
+  position: absolute;
+  top: 70px;
+}
+#main .algrid .algrid-right .algrid-right-s .algrid-right-s-btn a {
+  left: 70px;
+  position: relative;
+}
+#main .algrid .algrid-right .algrid-right-s .algrid-right-s-btn a:first-child {
+  left: 590px;
+}
+#main .algrid .algrid-right .algrid-right-s .algrid-right-s-view {
+  position: relative;
+  width: 392px;
+  height: 270px;
+  margin: 0 auto;
+  overflow: hidden;
+}
+#main .algrid .algrid-right .algrid-right-s .algrid-right-s-view ul li {
+  position: relative;
+  display: inline-block;
+  width: 188px;
+  height: auto;
+  vertical-align: top;
+}
+#main .algrid .algrid-right .algrid-right-s .algrid-right-s-view ul li a {
+  position: relative;
+  top: 0;
+  left: 0;
+}
+#main .algrid .algrid-right .algrid-right-s .algrid-right-s-view ul li a img {
+  width: 188px;
+  height: 188px;
+}
+#main .algrid .algrid-right .algrid-right-s .algrid-right-s-view ul li a strong {
+  font-size: 14px;
+  line-height: 40px;
+}
+#main .algrid .algrid-right .algrid-right-s .algrid-right-s-view ul li a span {
+  font-size: 16px;
+  color: #888;
+  line-height: 40px;
 }
 #main .algrid .algrid-right .algrid-right-m div {
   vertical-align: top;
   width: 345px;
   height: 348px;
   display: inline-block;
-  outline: 1px solid gray;
   margin-left: 7px;
 }
 #main .algrid .algrid-right .algrid-right-m div:first-child {
@@ -297,6 +398,13 @@ header .bg-grid .col {
   line-height: 24px;
   font-size: 14px;
   color: #282829;
+}
+#main .algrid .algrid-right .algrid-right-m .algrid-right-m-video {
+  background-color: #303;
+}
+#main .algrid .algrid-right .algrid-right-m .algrid-right-m-video video {
+  width: 345px;
+  height: 348px;
 }
 #main .social-review {
   height: auto;
@@ -339,9 +447,6 @@ header .bg-grid .col {
   width: 100%;
   height: auto;
   margin-top: 75px;
-}
-#main .social-review ul:first-child {
-  display: block;
 }
 #main .social-review ul li {
   display: inline-block;
