--- a/espoir/less/main.less
+++ b/espoir/less/main.less
@@ -6,6 +6,7 @@
 header{
   height:60px;
   background-color:#000;
+  position:relative;
   nav{
     width: 1424px;
     margin: 0 auto;
@@ -17,31 +18,87 @@ header{
         text-indent:-999px;
       }
     }
-    ul{
-      float: right;
-      padding-left:20px;
-      li{
-        display: inline-block;
-        width:100px;
-        text-align: center;
-        a{
-          font-size:18px;
-          font-weight: bold;
-          line-height: 60px;
-          color: #fff;
-          letter-spacing:-1.5px;
-        }
-        div{
-          display: none;
+    .nav{
+      ul{
+        float: right;
+        padding-left:20px;
+        li{
+          display: inline-block;
+          width:100px;
+          text-align: center;
+          a{
+            font-size:18px;
+            font-weight: bold;
+            line-height: 60px;
+            color: #fff;
+            letter-spacing:-1.5px;
+          }
+          div{
+            display: none;
+            position: absolute;
+            top:60px;
+            left: 0;
+            width: 100%;
+            height:0;
+            overflow: hidden;
+            z-index: 2;
+            background-color: #fff;
+            text-align:left;
+            ul{
+              position: relative;
+              left:-600px;
+              top:30px;
+              display: inline-block;
+              width:14%;
+              height: 394px;
+              padding:49px;
+              margin-left:30px;
+              border:1px solid #000;
+              li{
+                display: block;
+                padding-bottom: 10px;
+                line-height: 20px;
+                font-size: 16px;
+                text-align: left;
+                &:first-child{
+                  font-size:30px;
+                  font-weight: bold;
+                  line-height: 34px;
+                }
+                div{
+                  width:194px;
+                  font-size: 14px;
+                  color:#bbb;
+                  font-weight: lighter;
+                  line-height:20px;
+                  height:66px;
+                }
+              }
+            }
+            figure{
+              position: relative;
+              left:-600px;
+              top:-10px;
+              display: inline-block;
+              width:14%;
+              height: 394px;
+              padding:49px;
+              float:right;
+              a{
+                img{
+                }
+              }
+            }
+          }
         }
       }
-    }
-    .nav-icon{
-      li{
-        a{
-          font-size:0;
-          text-indent:-999px;
-          background-repeat: no-repeat;
+      .nav-icon{
+        li{
+          a{
+            font-size:0;
+            text-indent:-999px;
+            background-repeat: no-repeat;
+          }
         }
       }
     }
@@ -250,10 +307,15 @@ header{
             }
           }
           &.gradation{
+            width:337px;
+            height: 372px;
+            overflow: hidden;
+            background-color:#ddd;
             div{
-              width:337px;
+              width:3000px;
               height: 372px;
               position: relative;
+              left:0;
               background: linear-gradient(270deg, #18f0b8, #e6376f, #e87f19);
             }
           }
@@ -272,9 +334,55 @@ header{
       }
       div{}
       .algrid-right-s{
+        position: relative;
         margin-top:40px;
         width: 100%;
         height: 330px;
+        .algrid-right-s-btn{
+          position: absolute;
+          top:70px;
+          a{
+            left:70px;
+            position: relative;
+            &:first-child{
+              left:590px;
+            }
+          }
+        }
+        .algrid-right-s-view{
+          position: relative;
+          width: 392px;
+          height:270px;
+          margin: 0 auto;
+          overflow: hidden;
+          ul{            
+            li{
+              position: relative;
+              display: inline-block;
+              width: 188px;
+              height:auto;
+              vertical-align: top;
+              a{
+                position: relative;
+                top:0;
+                left:0;
+                img{
+                  width: 188px;
+                  height: 188px;
+                }
+                strong{
+                  font-size: 14px;
+                  line-height:40px;
+                }
+                span{
+                  font-size: 16px;
+                  color: #888;
+                  line-height:40px;
+                }
+              }
+            }
+          }
+        }
       }
       .algrid-right-m{
         div{
@@ -282,7 +390,6 @@ header{
           width: 345px;
           height: 348px;
           display: inline-block;
-          outline: 1px solid gray;
           margin-left:7px;
           &:first-child{
             margin-left:0;
@@ -297,6 +404,13 @@ header{
               color: #282829;
             }
 
+          }
+        }
+        .algrid-right-m-video{
+          background-color:#303;
+          video{
+            width: 345px;
+            height: 348px;
           }
         }
       }
@@ -343,9 +457,6 @@ header{
       width: 100%;
       height:auto;
       margin-top: 75px;
-      &:first-child{
-        display: block;
-      }
       li{
         display: inline-block;
         width:24.5%;
