--- a/mirrorballmusic/less/main.less
+++ b/mirrorballmusic/less/main.less
@@ -112,6 +112,8 @@ section{
     }
     .slide-view{
       height:600px;
+      width: 100%;
+      position: relative;
       overflow: hidden;
       ul{
         li{
@@ -125,9 +127,12 @@ section{
             div{
               display: block;
               img{
+                width: 100%;
                 &:last-child{
-                  position: absolute;
-                  top:150px;
+                  width:auto;
+                  z-index: 2;
+                  position:absolute;
+                  top:100px;
                   left:150px;
                 }
               }
@@ -255,9 +260,7 @@ section{
           width:200px;
           height:200px;
           overflow: hidden;
-          background-color:#ddd;
-          outline: 1px solid gray;
-          margin-left:-5px;
+          margin-left:-6px;
           padding:0;
           vertical-align: middle;
           div{
