--- a/kakao/less/mixin.less
+++ b/kakao/less/mixin.less
@@ -40,3 +40,18 @@
     transform: scale(1.2,1.2); /* Standard syntax */
   }
 }
+.sub-text(){
+  span{
+    display: block;
+    font-size:22px;
+    margin-bottom: 25px;
+    strong{
+      font-weight: bold;
+    }
+  }
+  p{
+    color: #b1b1b1;
+    font-size: 16px;
+    line-height:24px;
+  }
+}
